--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Admin Hiretend</title>
+    <title>Container Detection</title>
     <link rel="icon" href="/favicon.png" type="image/x-icon" />
     <!-- <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"> -->
