Update UI Source detail - tab containers

--- a/src/pages/containers/$id/style.less
+++ b/src/pages/containers/$id/style.less
@@ -13,6 +13,14 @@
     }
   }
 
+  .preview img,
+  .preview video {
+    max-width: 100%;
+    height: 400px;
+    max-height: 500px;
+    object-fit: contain;
+  }
+
   .actions {
     button {
       min-width: 92px;
