--- a/src/pages/sources/$id/containers/style.less
+++ b/src/pages/sources/$id/containers/style.less
@@ -29,3 +29,14 @@
     text-overflow: ellipsis;
   }
 }
+
+.content {
+  .preview img,
+  .preview video {
+    max-width: 100%;
+    height: 320px;
+    max-height: 400px;
+    object-fit: contain;
+    overflow: hidden;
+  }
+}
