Update UI container detail

--- a/src/pages/containers/$id/style.less
+++ b/src/pages/containers/$id/style.less
@@ -2,7 +2,10 @@
 
 .content {
   font-size: 14px;
-  & > div {
+  h2 {
+    font-weight: bold;
+  }
+  & > div:not(:first-child) {    
     padding-bottom: 10px;
     & > span {
       display: inline-block;
