--- a/src/pages/sources/$id/containers/style.less
+++ b/src/pages/sources/$id/containers/style.less
@@ -17,7 +17,10 @@
 }
 
 .header {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
+  button{
+    margin-right: 12px;
+  }
 }
 
 .infoLimit {
@@ -34,9 +37,20 @@
   .preview img,
   .preview video {
     max-width: 100%;
-    height: 320px;
-    max-height: 400px;
+    width: 100%;
+    min-height: 380px;
+    height: auto;
+    max-height: 460px;
     object-fit: contain;
     overflow: hidden;
+  }
+  .preview img{
+    background: url('/icons/icon-512x512.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-size: 300px;
+    width: 100%;
+    height: 100%;
   }
 }
