--- a/src/pages/containers/$id/style.less
+++ b/src/pages/containers/$id/style.less
@@ -15,6 +15,10 @@
       white-space: nowrap;
     }
   }
+  .image{
+    max-width: 100%;
+    max-height: 240px;
+  }
 
   .actions {
     button {
