--- a/src/pages/sources/$id/info/style.less
+++ b/src/pages/sources/$id/info/style.less
@@ -8,13 +8,12 @@
   font-size: 14px;
   & > div {
     padding-bottom: 16px;
-  }
-  span {
-    display: inline-block;
-    padding-right: 5px;
-    color: rgba(0, 0, 0, 0.85);
-    font-weight: 500;
-    white-space: nowrap;
+    & > span {
+      display: inline-block;
+      padding-right: 5px;
+      font-weight: 600;
+      white-space: nowrap;
+    }
   }
   .preview img,
   .preview video {
