update page checkin && source

--- a/src/pages/checkin/style.less
+++ b/src/pages/checkin/style.less
@@ -3,7 +3,25 @@
 .header {
   margin-bottom: 10px;
 }
-.image{
+
+.staffInfo {
+  .right {
+    margin-left: 8px;
+
+    h4 {
+      font-size: 14px;
+      font-weight: 600;
+      margin-bottom: 2px;
+    }
+
+    p {
+      margin-bottom: 0;
+      font-size: 12px;
+    }
+  }
+}
+
+.image {
   max-height: 80px;
   max-width: 200px;
   object-fit: contain;
