--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -44,10 +44,10 @@
   }
 
   h2 {
-    margin-bottom: 0;
     color: #fff;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 32px;
+    margin-top: 16px;
   }
 }
 
