--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Nhận diện Container</title>
-    <link rel="icon" href="/favicon.png" type="image/x-icon" />
+    <title>BVQN - Nhận diện chấm công</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <!-- <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800&display=swap" rel="stylesheet"> -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Inter:400,500,600,700&display=swap&subset=vietnamese" rel="stylesheet">
