--- a/src/pages/employee/style.less
+++ b/src/pages/employee/style.less
@@ -2,14 +2,19 @@
 
 .header {
   margin-bottom: 10px;
+  button{
+    margin-right: 12px
+  }
 }
 
 .listImages {
   display: flex;
   gap: 8px;
+  overflow: hidden;
 
   img {
     width: 50px;
+    height: 50px;
     object-fit: contain;
   }
 }
