--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -25,6 +25,10 @@
   .ant-pro-page-header-wrap-page-header-warp {
     border-bottom: 1px solid @border-color-split;
   }
+  
+  .ant-table-small{
+    border: none;
+  }
 
   .ant-table-thead > tr > th {
     background: unset;
