--- a/src/layouts/PortalLayout/PortalLayout.less
+++ b/src/layouts/PortalLayout/PortalLayout.less
@@ -4,7 +4,7 @@
 
 :global {
   .ant-layout {
-    background-color: #fff;
+    background-color: #fafafa;
   }
   .@{portalLayout-prefix-cls} {
     margin: 24px;
