--- a/src/pages/dashboard/style.less
+++ b/src/pages/dashboard/style.less
@@ -1,39 +1,63 @@
 @import '~antd/es/style/themes/default.less';
 
-.header {
-  margin-bottom: 10px;
-}
+.dashboard {
+  :global {
+    .ant-pro-page-header-wrap-children-content {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+    }
+    .ant-card {
+      border-radius: 5px;
+    }
+  }
 
-.staffInfo {
-  .right {
-    margin-left: 8px;
+  .box {
+    // box-shadow: 2px 2px 12px 2px rgba(0, 0, 0, 0.1);
+    :global {
+      .ant-card-loading-content {
+        height: 67px;
+        overflow: hidden;
+      }
+    }
+    .label {
+      margin-bottom: 0;
+    }
 
-    h4 {
-      font-size: 14px;
-      font-weight: 600;
-      margin-bottom: 2px;
+    .value {
+      font-weight: 500;
+      font-size: 28px;
+      margin-bottom: 4px;
+    }
+
+    .icon {
+      font-size: 40px;
+
+      &.employee {
+        color: #5727cf;
+      }
+
+      &.checked {
+        color: @success-color;
+      }
+
+      &.late {
+        color: @warning-color;
+      }
+
+      &.notChecked {
+        color: @error-color;
+      }
+    }
+  }
+
+  .checkinChart {
+    h2 {
+      margin-bottom: 4px;
     }
 
     p {
-      margin-bottom: 0;
-      font-size: 12px;
+      margin-bottom: 40px;
     }
   }
-}
-
-.image {
-  max-height: 80px;
-  max-width: 200px;
-  object-fit: contain;
-  cursor: pointer;
-}
-.actions {
-  display: flex;
-
-  .delete {
-    color: @red-6;
-  }
-}
-.iconStatus {
-  font-size: 18px;
 }
