new container detect

--- a/src/pages/dashboard/style.less
+++ b/src/pages/dashboard/style.less
@@ -33,19 +33,15 @@
     .icon {
       font-size: 40px;
 
-      &.employee {
+      &.total {
         color: #5727cf;
       }
 
-      &.checked {
+      &.success {
         color: @success-color;
       }
 
-      &.late {
-        color: @warning-color;
-      }
-
-      &.notChecked {
+      &.failed {
         color: @error-color;
       }
     }
